--- a/src/frontend/index.css
+++ b/src/frontend/index.css
@@ -27,6 +27,10 @@ h1 {
   @apply font-medium text-4xl text-white;
 }
 
+h2 {
+  @apply font-medium text-2xl text-white;
+}
+
 :root {
   --radius: 0.625rem;
   --background: oklch(1 0 0);
